; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/mesh/internal_communication/main/extr_mesh_light.c_mesh_light_process.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/mesh/internal_communication/main/extr_mesh_light.c_mesh_light_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64, i64 }

@ESP_FAIL = common dso_local global i32 0, align 4
@MESH_TOKEN_ID = common dso_local global i64 0, align 8
@MESH_TOKEN_VALUE = common dso_local global i64 0, align 8
@MESH_CONTROL_CMD = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mesh_light_process(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = bitcast i32* %9 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %10, %struct.TYPE_2__** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %13
  %17 = load i32, i32* %7, align 4
  %18 = sext i32 %17 to i64
  %19 = icmp ult i64 %18, 32
  br i1 %19, label %20, label %22

20:                                               ; preds = %16, %13, %3
  %21 = load i32, i32* @ESP_FAIL, align 4
  store i32 %21, i32* %4, align 4
  br label %55

22:                                               ; preds = %16
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @MESH_TOKEN_ID, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %34, label %28

28:                                               ; preds = %22
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @MESH_TOKEN_VALUE, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %28, %22
  %35 = load i32, i32* @ESP_FAIL, align 4
  store i32 %35, i32* %4, align 4
  br label %55

36:                                               ; preds = %28
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 2
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @MESH_CONTROL_CMD, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %53

42:                                               ; preds = %36
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 3
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %42
  %48 = call i32 (...) @esp_mesh_get_layer()
  %49 = call i32 @mesh_connected_indicator(i32 %48)
  br label %52

50:                                               ; preds = %42
  %51 = call i32 @mesh_light_set(i32 0)
  br label %52

52:                                               ; preds = %50, %47
  br label %53

53:                                               ; preds = %52, %36
  %54 = load i32, i32* @ESP_OK, align 4
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %53, %34, %20
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local i32 @mesh_connected_indicator(i32) #1

declare dso_local i32 @esp_mesh_get_layer(...) #1

declare dso_local i32 @mesh_light_set(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
